# shuku

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  cliff.toml  pyproject.toml  shuku.spec
.githooks/: commit-msg  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 2_bug_report.yml  3_feature_request.yml  config.yml
.github/workflows/: cd.yml  ci.yaml  ci.yml
.release-hooks/: pre-release
assets/: release-notice.md
assets/animation_demo/: condensing_animation.html
assets/cli_demo/: shuku_demo.tape
shuku/: cli.py  config.py  demo_utils.py  logging_setup.py  utils.py
tests/: test_cli.py  test_config.py  test_integration.py  test_logger.py
tests/test_files/config/: condense_all.toml  mp3v9nopaddingsrt_dotnotation.toml  mp3v9nopaddingsrt_sections.toml
tests/test_files/input/: T×T 週末版時報cm(イマミル) [t2zOxG4BzTM].vtt  bruh.opus  bruh.srt  bruh_delayed_10_sec.srt  storm.flac  storm.srt  unsorted_subs.srt  ディスコで超ノリノリのげんげん [ISyLeiYnPx8].mkv  ディスコで超ノリノリのげんげん [ISyLeiYnPx8].vtt
tests/test_files/output/: T×T 週末版時報cm(イマミル) [t2zOxG4BzTM] (condensed).srt  bruh (condensed).flac  bruh (condensed).srt  unsorted_subs (condensed).lrc  祝成人！新成人インタビュー [ufQzl-dyA4s]_TLDR.srt
